--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,10 @@ nav{
         width: 1.5rem;
         height: 1.5rem;
     }
+
+    .content-section.content-section.active{
+        top: 45%
+    }
 }
 
 @media only screen and (max-width: 450px) {
