--- a/styles.css
+++ b/styles.css
@@ -178,8 +178,8 @@ nav{
 }
 
 #projects > a{
-    margin-top: 2rem;
-    margin-bottom: .5rem;
+    margin-top: .5rem;
+    margin-bottom: .2rem;
     width: 25%;
 }
 
