added hoi4 to about section

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,11 @@ a.active-link {
     transition: .5s;
 }
 
+#about > img{
+    align-self: center;
+    width: 100%;
+}
+
 #contact{
     display: flex;
     justify-content: center;
